- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    None
 - 
    5.1.0 Beta 1
 - 
    None
 
- 
        cf6f7de3f03d52174f3dfa57031159caa4e7be31
 
Using the test case included in gridinstack.tar.gz
1 - click the red button to push the page (MyPage.qml using GridLayout) in the stack
2 - press the green button to go back
=> There is a segfault when trying the destroy the MyPage.qml
Note that in MyPage.qml, the segfault does not arise if:
- you comment out the line "property int myproperty: 0"
 - or if you comment the line "Layout.columnSpan: 2" in label2
(commenting the same line in label1 does not prevent the segfault) 
- is required for
 - 
                    
QTBUG-31105 Qt 5.1 RC1 release tasks
-         
 - Closed
 
 -